--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,11 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
+      body {
+        background-color: #282c34;
+      }
+    </style>
   </head>
   <body>
     <noscript>
